# Timetable-Scheduling-Using-Genetic-Algorithms

./: CMakeLists.txt  all_timetables.html  all_timetables_colored.html  all_timetables_interactive.html  chromosome_data.txt  chromosome_data_editing.txt  chromosome_data_testing.txt  classes.cpp  consolidated_timetable.html  constraints_testing  constraints_testing.cpp  generate_timetable.py  tempCodeRunnerFile.cpp  test  test.cpp  testing_py_script.py  testing_py_script_hover copy.py  testing_py_script_hover.py
Chromosome/: Chromosome.cpp  Chromosome.h
GeneticAlgorithm/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
GlobalVariables/: GlobalVariables.cpp  GlobalVariables.h
Lecturer/: Lecturer.cpp  Lecturer.h
LecturerTimeSlotPreference/: LecturerTimeSlotPreference.cpp  LecturerTimeSlotPreference.h
Module/: Module.cpp  Module.h
Population/: Population.cpp  Population.h
ScheduledModule/: ScheduledModule.cpp  ScheduledModule.h
TimeSlot/: TimeSlot.cpp  TimeSlot.h
UtilityFunctions/: UtilityFunctions.cpp  UtilityFunctions.h
Venue/: Venue.cpp  Venue.h
data_entry/: data_entery.html  script.js  styles.css
data_entry/test/: all_timetables_colored.html  test
include/: Chromosome.h  GeneticAlgorithm.h  GlobalVariables.h  LecturerTimeSlotPreference.h  Module.h  Population.h  ScheduledModule.h  TimeSlot.h  UtilityFunctions.h  Venue.h  matplotlibcpp.h
src/: Chromosome.cpp  GeneticAlgorithm.cpp  GlobalVariables.cpp  Lecturer.cpp  LecturerTimeSlotPreference.cpp  Module.cpp  Population.cpp  ScheduledModule.cpp  TimeSlot.cpp  UtilityFunctions.cpp  Venue.cpp  main.cpp
(+4 files in other folders)
